# cg

examples/convex_hull/: andrew_hull.cpp
examples/operations/: CMakeLists.txt  contour_contains_point.cpp  contour_orientation.cpp  douglas_peucker.cpp  radius.cpp  segment_intersects_segment.cpp  triangle_contains_point.cpp
include/cg/convex_hull/: andrew.h  graham.h
include/cg/io/: triangle.h
include/cg/operations/: convex.h  douglas_peucker.h  orientation.h  radius.h
include/cg/operations/contains/: contour_point.h  triangle_point.h
include/cg/operations/has_intersection/: rectangle_segment.h  segment_segment.h  triangle_segment.h
include/cg/primitives/: circle.h  point.h  segment.h
tests/: CMakeLists.txt  contains.cpp  convex.cpp  convex_hull.cpp  has_intersection.cpp  orientation.cpp
